Fixed whitespace on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -448,7 +448,6 @@ select:focus-visible {
 
 .left, .right {
   flex: 1;
-  min-width: 300px;
   padding: 20px;
 }
 
@@ -960,15 +959,16 @@ select:focus-visible {
   display: flex;
   justify-content: center;
   width: 18%;
-  border-radius: 50%;
-  @media only screen and (max-width: 550px) {
+  border-radius: 28px;
+  @media only screen and (max-width: 768px) {
     display: none;
   }
 }
 
 .section__testimonials__image {
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 28px;
+  width: 100%;
   background-color: #ffffff;
   @media only screen and (max-width: 1440px) {
     height: auto;
@@ -1371,7 +1371,7 @@ select:focus-visible {
   }
 
   @media only screen and (max-width: 550px) {
-    font-size: 38px;
+    font-size: 25px;
   }
 }
 
